--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -8,7 +8,7 @@
       <% if logged_in? %>
            <%= render "layouts/#{current_user.role}_navigation" %>
       <% else %>
-  	   <li><%= link_to "Log in", login_path %></li>
+           <li class="login_link"><%= link_to "<i class='glyphicon glyphicon-log-in'></i> Login".html_safe, new_user_session_path %></li>
       <% end %>
       <li style="width:10px;"></li>
       </ul>
