--- a/app/views/layouts/_logo.html.erb
+++ b/app/views/layouts/_logo.html.erb
@@ -5,12 +5,11 @@
 <ul class="dropdown-menu">
 	<li><%= link_to "<i class='glyphicon glyphicon-user'></i> User Profile".html_safe, edit_user_path(current_user.id) %></li>
  <li class="divider"></li>
- <li><%= link_to "<i class='glyphicon glyphicon-log-out'></i> Logout".html_safe, logout_path, method: :delete %></li>
+ <li><%= link_to "<i class='glyphicon glyphicon-log-out'></i> Logout".html_safe, destroy_user_session_path, method: :delete %></li>
 </ul>
 </li>
 
 <%= link_to "Walk-In EMR", root_path, id: "logo" %>
-
     <% else %>
-      <%= link_to "Stoney Creek Medical Walk-In Clinic", root_path, id: "logo" %>
+      <li> <%= link_to "Stoney Creek Medical Walk-In Clinic", root_path, id: "logo" %></li>
     <% end %>
