--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -11,10 +11,11 @@
 <div class='spacer-20'></div>
 
 <div class="medium">
-  <font color="red"> Due to exceptional circumstances caused by COVID-19 pandemic our clinic is currently closed. If you are registered patient and want to renew your medication or have another <u>urgent</u> issue, please call Dr. Ostapenko @ (289) 204-0561 and leave a message. She will return your call as soon as possible.
+  <font color="red"> Due to exceptional circumstances caused by COVID-19 pandemic, our clinic is currently closed. If you are registered patient and need to renew your medication, or have another <u>urgent</u> issue, please call Dr. Ostapenko @ (289) 204-0561 and leave a message. She will return your call as soon as possible.
   </font>
 </div>
 
+<h1>Dr. Ostapenko: (289) 204-0561  </h1>
 <!--
 <p class="medium">
 No appointment is necessary, we service both Ontario and out of province patients.
