--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,15 +1,18 @@
  <tr>
-  <td><%= link_to user.name, edit_user_path(user) %></td>
   <td><%= user.email %></td>
-  <td><%= user.role %></td>
-  <td><%= user.activated? %></td>
-  <td><%= user.created_at %></td>
-  <td><%= user.updated_at %></td>
+  <td class='text-center'><%= user.role %></td>
+  <td class='text-center'><%= user.confirmed? %></td>
+  <td><%= user.patient? %></td>
+  <td class='text-center'><%= user.created_at.to_date %></td>
+  <td class='text-center'><%= user.sign_in_count %></td>
+  <td class='text-center'><%= user.last_sign_in_at %></td>
+  <td class='text-center'><%= user.invited_by %></td>
 
-  <% if current_user.admin? %>
-     <td> <%= link_to '<i class="glyphicon glyphicon-random"></i>'.html_safe, switch_user_path(user),  method: :get %> </td>
-     <% if !current_user?(user) %>
-       <td><%= link_to '<i class="glyphicon glyphicon-remove-sign"></i>'.html_safe, user, method: :delete, data: { confirm: "Delete user #{user.name}?" } %></td>
+   <% if current_user?(user) %>
+       <td colspan=3></td>
+     <% else %>
+       <td class="text-center"><%= link_to '<i class="glyphicon glyphicon-edit"></i>'.html_safe, edit_user_path(user),  method: :get, remote: true, 'data-toggle':  "modal", 'data-target': '#modal-window' %> </td>
+       <td class="text-center"><%= link_to '<i class="glyphicon glyphicon-random"></i>'.html_safe, switch_user_path(user),  method: :get %> </td>
+       <td class="text-center"><%= link_to '<i class="glyphicon glyphicon-remove-sign"></i>'.html_safe, user, method: :delete, data: { confirm: "Delete user #{user.name}, #{user.email}?" } %></td>
      <% end %>
-  <% end %>
  </tr>
