--- a/app/views/layouts/_logo.html.erb
+++ b/app/views/layouts/_logo.html.erb
@@ -3,7 +3,7 @@
 <li class="dropdown nav-item">
 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-menu-hamburger text-muted"></i></a>
 <ul class="dropdown-menu">
-	<li><%= link_to "<i class='glyphicon glyphicon-user'></i> User Profile".html_safe, edit_user_path(current_user.id) %></li>
+	<li><%= link_to "<i class='glyphicon glyphicon-user'></i> User Profile".html_safe, edit_user_path(current_user.id), remote: true, 'data-toggle': "modal", 'data-target': '#modal-window', method: "get"  %></li>
  <li class="divider"></li>
  <li><%= link_to "<i class='glyphicon glyphicon-log-out'></i> Logout".html_safe, destroy_user_session_path, method: :delete %></li>
 </ul>
