patient pages partials factored out

--- a/app/views/layouts/_logo.html.erb
+++ b/app/views/layouts/_logo.html.erb
@@ -8,8 +8,8 @@
  <li><%= link_to "<i class='glyphicon glyphicon-log-out'></i> Logout".html_safe, destroy_user_session_path, method: :delete %></li>
 </ul>
 </li>
-
-<%= link_to "Walk-In EMR", root_path, id: "logo" %>
+<% path = current_user.patient? ? 'patient_path(current_user.patient)' : 'root_path' %>
+<%= link_to "Walk-In EMR", eval(path), id: "logo" %>
     <% else %>
       <li> <%= link_to "Stoney Creek Medical Walk-In Clinic", root_path, id: "logo" %></li>
     <% end %>
