--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -1,98 +1,14 @@
 <% provide(:title, @patient.full_name) %>
 <%= render "shared/modal" %>
-<% remote = device_is_desktop? %>
-<% hcnum = "Health Card: #{@patient.ohip_num} #{@patient.ohip_ver} (#{@patient.hin_prov}) Expires: #{@patient.hin_expiry}" %>
-<% ifhnum = "IFH #: #{@patient.ifh_number}" if @patient.ifh_number.present? %> 
 
 <h1><%= @patient.full_name %> (<%= @patient.pat_type %>):  Patient Profile &nbsp; 
-
   <% unless current_user.patient? %>
   <%= link_to '<i class="glyphicon glyphicon-edit"></i>'.html_safe, edit_patient_path(@patient), remote: true, 'data-toggle': "modal", 'data-target': '#modal-window' %>
   <% end %>
 </h1>
 
-<div class="row">
-  <aside class="col-md-6">
-    <section class="user_info">
-<pre class="pre-scrollable">
-<% if @patient.pat_type == CASH_PATIENT %>
-<b>CASH PATIENT</b> <%= link_to '<i class="glyphicon glyphicon-credit-card"></i>'.html_safe, label_patient_path(@patient), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window',  method: 'get' %>
-<% else %>
-<b>INSURED PATIENT</b> <%= link_to '<i class="glyphicon glyphicon-credit-card"></i>'.html_safe, label_patient_path(@patient), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window',  method: 'get' %>
-<%= hcnum if hcnum.present? %>
-<%= ifhnum if ifhnum.present? %>
-<% end %>
-<b><%= @patient.full_name %>: <%= "(#{@patient.maid_name})" if @patient.maid_name %></b> <%= @patient.age_str %> <%= @patient.full_sex %>; Born: <%= @patient.dob %><% if @patient.chart.present? %> <%= link_to '<i class="glyphicon glyphicon-copy"></i>'.html_safe, chart_patient_path(@patient) %> <% end %>
-Phone: <%= num_to_phone(@patient.phone) %> <%= "Mobile: #{num_to_phone(@patient.mobile)}" if @patient.mobile.present? %> <%= "Email: #{mail_to @patient.email}" if @patient.email.present? %> 
-Address: <%= @patient.addr %>
-	    <%= @patient.city %> <%= @patient.prov %> 
-	    <%= @patient.postal %>
-<% if @patient.allergies.present? %>
-Allergies: <%= @patient.allergies %>
-<% end %>
-<!-- active meds for this pat -->
-<% if @patient.med_list %>
-Medications:
-     <%= @patient.med_list.join("\n     ") %>
-<% end %> </b>
-<% if @patient.meds.present? %>
-<font color='red'><i> Old Medications to be deleted after conversion: <%= @patient.meds %> </i></font>
-<% end %>
-</pre>
-	 
- <% if @patient.notes.present? %> 
- <div class="panel panel-info">
-   <div class="patient-notes-panel-body">
-	   <% html_str = "<pre class='notes'> #{@patient.notes} </pre>" %>
-	   <%= html_str.html_safe %>
-   </div>
-</div>
-<% end %>
+  <%= render "#{current_user.role}_show" %>
 
-&nbsp; <%= render("medications", remote: remote) if @patient.medications.any? %>
-&nbsp; <%= render("prescriptions", remote: remote) if @patient.prescriptions.any? %>
-&nbsp; <%= render("invoices", remote: remote) if @patient.invoices.any? %>
-&nbsp; <%= render("letters", remote: remote) if @patient.letters.any? %>
-&nbsp; <%= render("referrals", remote: remote) if @patient.referrals.any? %>
-&nbsp; <%= render("patient_docs", remote: remote) if @patient.patient_docs.any? %>
-
-
-  </section>
-<div class="row">
-   <%= render "buttons", remote: remote unless current_user.patient? %> 
-</div>
-</aside>
-
-  <div class="col-md-6">
-    <h3>Visits: (<%= @patient.visits.count %>)</h3>
-    <% if @patient.visits.any? %>
-        <table class="tbl">
-  	  <thead>
-	  <tr>
-	    <th>Date</th>
-	    <th>Bil.Type</th>
-	    <th class="tbl_md">Edit</th>
-	    <th>Doctor</th>
-	    <th class="tbl_md">Diag.</th>
-	    <th>Services</th>
-	    <th class="tbl_md">Status</th>
-	  </tr>
-	  <tbody>
-
-        <%= render @visits, remote: device_is_desktop? %>
-
-          </tbody>
-	</table>
-	<div class="spacer-10"></div>
-	<div class="row">
-	  <div class="col-md-12"> <%= link_to "Print Visit History", visit_history_patient_path(@patient),  remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window', class: "btn btn-info", method: 'get' %> </div>
-	</div>
-        <div style="float:right">
-	<%= will_paginate @visits %>
-        </div>
-    <% end %>
-  </div>
-</div>
 
 
 
