--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -27,6 +27,6 @@
 <% if current_user.admin? %>
 <div class="bottom_buttons ">
 <%= will_paginate @users, class: "btn" %> 
-<%= button_to "Add User", new_user_registration_path, class: "btn btn-primary col-md-2 ", method: 'get'  %>
+<%# button_to "Add User", new_user_registration_path, class: "btn btn-primary col-md-2 ", method: 'get'  %>
 </div>
 <% end %>
