--- a/app/views/visits/_visit.html.erb
+++ b/app/views/visits/_visit.html.erb
@@ -3,11 +3,9 @@
   <td><%= link_to visit.date, patient_visit_path(@patient,visit) %> </td>
   <td><%= visit.pat_type %></td>
   <td>
+  <% unless current_user.patient? %>  
   <% if visit.editable? || current_user.admin? %>
-  <% if remote %>
-     <%= link_to '<i class="glyphicon glyphicon-edit"></i>'.html_safe, edit_patient_visit_path(@patient,visit), remote: true, 'data-toggle':  "modal", 'data-target': '#modal-window' %> </td>
-  <% else %>
-     <%= link_to '<i class="glyphicon glyphicon-edit"></i>'.html_safe, edit_patient_visit_path(@patient,visit) %>
+    <%= link_to '<i class="glyphicon glyphicon-edit"></i>'.html_safe, edit_patient_visit_path(@patient,visit), remote: true, 'data-toggle':  "modal", 'data-target': '#modal-window' %> 
   <% end %>
   <% end %>
   </td>
