--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -16,6 +16,8 @@
 </div>
 
 <h1>Dr. Ostapenko: (289) 204-0561  </h1>
+
+<p>Clinic patients can register <%= link_to 'Here', new_user_registration_path %> </p>
 <!--
 <p class="medium">
 No appointment is necessary, we service both Ontario and out of province patients.
