text added in patient profile

--- a/app/views/patients/_patient_show.html.erb
+++ b/app/views/patients/_patient_show.html.erb
@@ -27,6 +27,9 @@ Medications:
      <%= @patient.med_list.join("\n     ") %>
 <% end %> </b>
 </pre>
+
+<p><b>Coming soon: ability to modify your profile and book an appointment with the doctor. 
+For now please contact Dr. Ostapenko directly at (289) 204-0561  </b></p>
 	 
 &nbsp; <%# render("medications", remote: remote) if @patient.medications.any? %>
 &nbsp; <%# render("prescriptions", remote: remote) if @patient.prescriptions.any? %>
