--- a/app/views/patients/_patient_show.html.erb
+++ b/app/views/patients/_patient_show.html.erb
@@ -5,7 +5,7 @@
 <div class="row">
   <aside class="col-md-6">
     <section class="user_info">
-<pre class="pre-scrollable">
+<pre class="pre-scrollable-xlg">
 <% if @patient.pat_type == CASH_PATIENT %>
 <b>CASH PATIENT</b> <%= link_to '<i class="glyphicon glyphicon-credit-card"></i>'.html_safe, label_patient_path(@patient), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window',  method: 'get' %>
 <% else %>
