--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -6,6 +6,7 @@
 
       <ul class="nav navbar-nav navbar-right">
       <% if logged_in? %>
+           <%= render "shared/modal" %>
            <%= render "layouts/#{current_user.role}_navigation" %>
       <% else %>
            <li class="login_link"><%= link_to "<i class='glyphicon glyphicon-log-in'></i> Login".html_safe, new_user_session_path %></li>
