--- a/app/views/patients/_form.html.erb
+++ b/app/views/patients/_form.html.erb
@@ -44,7 +44,7 @@
   </div>
 
   <div class="col-sm-1 padding-0" id="ohip_ver">
-     <%= f.input :ohip_ver, label: 'VC' %>
+     <%= f.input :ohip_ver, label: 'Version' %>
   </div>
 
   <div class="col-sm-1" id="hin_prov" >
