--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -11,13 +11,28 @@
 <div class='spacer-20'></div>
 
 <div class="medium">
-  <font color="red"> Due to exceptional circumstances caused by COVID-19 pandemic, our clinic is currently closed. If you are registered patient and need to renew your medication, or have another <u>urgent</u> issue, please call Dr. Ostapenko @ (289) 204-0561 and leave a message. She will return your call as soon as possible.
-  </font>
+  <font color="red"> Due to exceptional circumstances caused by COVID-19 pandemic, our clinic is currently closed. </font>
+<div class='spacer-10'></div>
+<div>
+  <ul>
+    <li>
+  If you are registered patient and need to renew your medication, or have another <u>urgent</u> issue, please call Dr. Ostapenko @ (289) 204-0561 directly. If not available right away, she will return your call as soon as possible.
+    </li>
+    <li> If you are not registered with us but urgently need medical help, please call the number below. We are doing our best to return all calls as fast as we can. </li>
+    <li> 
+      Uninsured patients: we are trying to help everybody - even if you don't have valid health insurance you can still call the number below and get medical help 
+    </li>
+  </ul>
 </div>
+</div>
+
+<div class='spacer-10'></div>
+We are working hard to add virtual visit functionality to our website as fast as possible. In the meantime, please call the number below:
 
 <h1>Dr. Ostapenko: (289) 204-0561  </h1>
 
-<p>Clinic patients can register <%= link_to 'Here', new_user_registration_path %> </p>
+<p>OHIP insured patients can register <%= link_to 'Here', new_user_registration_path %> </p>
+
 <!--
 <p class="medium">
 No appointment is necessary, we service both Ontario and out of province patients.
