--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
 
-<%= f.full_error :patient_id unless f.error :ohip_num %>
+  <%= f.full_error :patient_id %> <%#unless f.error :ohip_num %>
 <div class="col-md-4 col-sm-4 col-md-offset-4 col-sm-offset-4">
 <h3>New User Registration</h3>
 <div class="well">
