--- a/app/views/invoices/_invoice.html.erb
+++ b/app/views/invoices/_invoice.html.erb
@@ -5,7 +5,7 @@
 
     <tr>
 	<% if invoice.exists? && device_is_desktop? %>
-	  <td><%= link_to invoice.id, invoice, remote: true, 'data-toggle':  "modal", 'data-target': '#modal-window' %></td>
+	  <td><%= link_to invoice.id, invoice, remote: true, 'data-toggle':  "modal", 'data-target': '#modal-window', onclick: "set_lg_modal()"   %></td>
 	<% else %>
 	  <td><%= invoice.id %></td>
 	<% end %>  
@@ -25,7 +25,7 @@
 	  <td><%= link_to '<i class="glyphicon glyphicon-question-sign"></i>'.html_safe, download_invoice_path(invoice)  %></td>
   	<% end %>
 
-	<td><%=  link_to '<i class="glyphicon glyphicon-edit"></i>'.html_safe, edit_invoice_path(invoice), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window' %></td>
+	<td><%=  link_to '<i class="glyphicon glyphicon-edit"></i>'.html_safe, edit_invoice_path(invoice), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window', onclick: "set_lg_modal()"   %></td>
 	<td> <%= link_to '<i class="glyphicon glyphicon-remove-sign"></i>'.html_safe, invoice, method: :delete, data: { confirm: "Are you sure you want to delete invoice # #{invoice.id} billed to #{provider.name} ?" } %> </td>
      </tr>
 
