--- a/app/views/letters/_letter.html.erb
+++ b/app/views/letters/_letter.html.erb
@@ -2,7 +2,7 @@
 
     <tr>
 	<% if letter.exists? && device_is_desktop? %>
-	  <td><%= link_to letter.id, letter, remote: true, 'data-toggle':  "modal", 'data-target': '#modal-window' %></td>
+	  <td><%= link_to letter.id, letter, remote: true, 'data-toggle':  "modal", 'data-target': '#modal-window', onclick: "set_lg_modal()"   %></td>
 	<% else %>
 	  <td><%= letter.id %></td>
 	<% end %>  
@@ -20,7 +20,7 @@
 	  <td><%= link_to '<i class="glyphicon glyphicon-question-sign"></i>'.html_safe, download_letter_path(letter)  %></td>
   	<% end %>
 
-	<td><%=  link_to '<i class="glyphicon glyphicon-edit"></i>'.html_safe, edit_letter_path(letter), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window' %></td>
+	<td><%=  link_to '<i class="glyphicon glyphicon-edit"></i>'.html_safe, edit_letter_path(letter), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window', onclick: "set_lg_modal()"   %></td>
 	<td> <%= link_to '<i class="glyphicon glyphicon-remove-sign"></i>'.html_safe, letter, method: :delete, data: { confirm: "Are you sure you want to delete letter # #{letter.id} ?" } %> </td>
      </tr>
 
