--- a/app/views/referrals/_referral.html.erb
+++ b/app/views/referrals/_referral.html.erb
@@ -4,7 +4,7 @@
 
     <tr>
 	<% if referral.exists? && device_is_desktop? %>
-	  <td><%= link_to referral.id, referral, remote: true, 'data-toggle':  "modal", 'data-target': '#modal-window' %></td>
+	  <td><%= link_to referral.id, referral, remote: true, 'data-toggle':  "modal", 'data-target': '#modal-window', onclick: "set_lg_modal()"   %></td>
 	<% else %>
 	  <td><%= referral.id %></td>
 	<% end %>  
@@ -22,7 +22,7 @@
 	  <td><%= link_to '<i class="glyphicon glyphicon-question-sign"></i>'.html_safe, download_referral_path(referral)  %></td>
   	<% end %>
 
-	<td><%= link_to '<i class="glyphicon glyphicon-edit"></i>'.html_safe, edit_referral_path(referral), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window' %></td>
+	<td><%= link_to '<i class="glyphicon glyphicon-edit"></i>'.html_safe, edit_referral_path(referral), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window', onclick: "set_lg_modal()" %></td>
 	<td><%= link_to '<i class="glyphicon glyphicon-remove-sign"></i>'.html_safe, referral, method: :delete, data: { confirm: "Are you sure you want to delete referral # #{referral.id} ?" } %> </td>
      </tr>
 
