--- a/app/views/visits/_patient_show.html.erb
+++ b/app/views/visits/_patient_show.html.erb
@@ -1,3 +1,5 @@
+<% codehash = ClaimError.pluck(:code, :descr).to_h %>
+
 <div class="row">
 <div class="col-sm-10 col-md-10 col-sm-offset-1 col-md-offset-1">
 
@@ -24,7 +26,7 @@
 <b>Entered at </b>: <%= @visit.entry_ts %>
 <% if @visit.billing_ref.present? %>
 <% if @visit.status == ERROR %>       
-<b>Error code: </b>: <%= link_to @visit.billing_ref, '#', {title: codehash[@visit.billing_ref]}  %>
+   <b>Error code: </b>: <%= link_to @visit.billing_ref, '#', {title: codehash[@visit.billing_ref]}  %>
 <% else %>
 <b>Billing Ref# </b>: <%= @visit.billing_ref %>
 <% end %>
