--- a/app/views/visits/_visit.html.erb
+++ b/app/views/visits/_visit.html.erb
@@ -1,11 +1,11 @@
-<% remote = device_is_desktop? %>
+<% remote = current_user.patient? %>
 <tr>
-  <td><%= link_to visit.date, patient_visit_path(@patient,visit) %> </td>
+  <td><%= link_to visit.date, patient_visit_path(@patient,visit) %></td>
   <td><%= visit.pat_type %></td>
   <td>
   <% unless current_user.patient? %>  
   <% if visit.editable? || current_user.admin? %>
-    <%= link_to '<i class="glyphicon glyphicon-edit"></i>'.html_safe, edit_patient_visit_path(@patient,visit), remote: true, 'data-toggle':  "modal", 'data-target': '#modal-window' %> 
+    <%= link_to '<i class="glyphicon glyphicon-edit"></i>'.html_safe, edit_patient_visit_path(@patient,visit), remote: true, 'data-toggle':  "modal", 'data-target': '#modal-window', onclick: "set_lg_modal()"  %> 
   <% end %>
   <% end %>
   </td>
