--- a/app/views/visits/show.html.erb
+++ b/app/views/visits/show.html.erb
@@ -1,17 +1,7 @@
-<%   
-  @patient = Patient.find(@visit.patient_id) 
-  @doctor = Doctor.find(@visit.doc_id)
-  provide(:title, "#{@patient.full_name} : #{@visit.entry_ts}") 
-  codehash = ClaimError.pluck(:code, :descr).to_h 
-%>
-<%= render "shared/modal" %>
+<%   provide(:title, "#{@patient.full_name} : #{@visit.entry_ts}") %>
 
 <h1> <%= @patient.full_name %> (<%= @visit.pat_type  %>) : Visit of <%= @visit.entry_ts %>  </h1>
-
-<% diag = Diagnosis.find_by(code: @visit.diag_code) %>
-<% codes = [@visit.proc_code, @visit.proc_code2, @visit.proc_code3, @visit.proc_code4] %>
-
 	
-  <%= render "#{current_user.role}_show" %>
+<%= render "#{current_user.role}_show" %>
 
 
