--- a/app/views/billings/index.html.erb
+++ b/app/views/billings/index.html.erb
@@ -5,7 +5,8 @@
   <thead>
       <tr>
 	  <th class="tbl_xs"></th>
-	  <% if date  %>
+          <th class="tbl_xmd"><%= sortable 'entry_ts', :Date %></th>
+          <% if date  %>
             <th class="tbl_lsm"><%= sortable 'entry_ts', :Time %></th>
           <% else %>
             <th class="tbl_md"><%= sortable 'entry_ts', :Date %></th>
