Consent form; Patients can now make an appointment

--- a/app/views/patients/_patient_show.html.erb
+++ b/app/views/patients/_patient_show.html.erb
@@ -28,8 +28,7 @@ Medications:
 <% end %> </b>
 </pre>
 
-<p><b>Coming soon: ability to book an appointment with the doctor. 
-For now please contact Dr. Ostapenko directly at (289) 204-0561  </b></p>
+<p><b> Please make an appointment below. Make sure your Health Card number, email and phone number are present in your profile (use sandwich menu top left to modify). Describe the reason for your virtual visit and save it. Dr. Ostapenko will get in touch with you as soon as she can. As usual, appointments are handled on first come first served basis.  </b></p>
 	 
 &nbsp; <%# render("medications", remote: remote) if @patient.medications.any? %>
 &nbsp; <%# render("prescriptions", remote: remote) if @patient.prescriptions.any? %>
@@ -37,6 +36,12 @@ For now please contact Dr. Ostapenko directly at (289) 204-0561  </b></p>
 &nbsp; <%# render("letters", remote: remote) if @patient.letters.any? %>
 &nbsp; <%# render("referrals", remote: remote) if @patient.referrals.any? %>
 &nbsp; <%# render("patient_docs", remote: remote) if @patient.patient_docs.any? %>
+
+<div class="col-sm-2 col-md-2">
+  <div class="btn-group">
+<%= button_to 'Make an Appointment', new_patient_visit_path(@patient), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window', class:"btn btn-primary btn-sm", method: 'get'  %>
+  </div>
+</div>
 
   </section>
 </aside>
